## CMakeLists.txt						-*- CMake -*-
##
## Copyright (C) 2011-2015 Christian Schenk
## 
## This file is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published
## by the Free Software Foundation; either version 2, or (at your
## option) any later version.
## 
## This file is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this file; if not, write to the Free Software
## Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307,
## USA.

use_static_crt()
use_static_libraries()

set(${botan_lib_name}_sources
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/algo_factory/algo_cache.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/algo_factory/algo_factory.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/algo_factory/algo_factory.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/algo_factory/prov_weight.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/alloc/allocate.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/alloc/mem_pool/mem_pool.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/alloc/mem_pool/mem_pool.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/alloc/secmem.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/alloc/system_alloc/defalloc.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/alloc/system_alloc/defalloc.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/alg_id.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/alg_id.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_alt.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_att.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_dn.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_int.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_int.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_obj.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_oid.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_oid.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_str.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/asn1_tm.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/ber_dec.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/ber_dec.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/der_enc.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/asn1/der_enc.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/benchmark/benchmark.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/benchmark/benchmark.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/aes/aes.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/aes/aes.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/aes/aes_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/block_cipher.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/blowfish/blfs_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/blowfish/blowfish.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/blowfish/blowfish.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/cast/cast128.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/cast/cast128.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/cast/cast256.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/cast/cast256.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/cast/cast_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/des/des.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/des/des.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/des/des_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/des/desx.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/des/desx.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/gost_28147/gost_28147.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/gost_28147/gost_28147.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/idea/idea.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/idea/idea.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/kasumi/kasumi.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/kasumi/kasumi.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/lion/lion.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/lion/lion.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/lubyrack/lubyrack.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/lubyrack/lubyrack.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/mars/mars.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/mars/mars.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/mars/mars_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/misty1/misty1.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/misty1/misty1.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/noekeon/noekeon.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/noekeon/noekeon.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/rc2/rc2.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/rc2/rc2.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/rc5/rc5.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/rc5/rc5.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/rc6/rc6.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/rc6/rc6.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/safer/safe_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/safer/safer_sk.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/safer/safer_sk.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/seed/seed.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/seed/seed.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/seed/seed_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/serpent/serpent.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/serpent/serpent.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/skipjack/skipjack.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/skipjack/skipjack.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/square/sqr_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/square/square.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/square/square.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/tea/tea.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/tea/tea.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/twofish/two_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/twofish/twofish.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/twofish/twofish.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/xtea/xtea.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/block/xtea/xtea.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/certstor.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/certstor.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/crl_ent.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/crl_ent.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/pkcs10.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/pkcs10.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509_ca.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509_ca.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509_crl.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509_crl.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509_ext.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509_ext.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509_obj.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509_obj.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509cert.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509cert.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509find.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509find.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509opt.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509self.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509self.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509stor.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cert/x509/x509stor.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/checksum/adler32/adler32.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/checksum/adler32/adler32.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/checksum/crc24/crc24.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/checksum/crc24/crc24.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/checksum/crc32/crc32.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/checksum/crc32/crc32.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cms/cms_algo.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cms/cms_comp.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cms/cms_dalg.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cms/cms_dec.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cms/cms_dec.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cms/cms_ealg.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cms/cms_enc.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cms/cms_enc.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/base64/b64_char.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/base64/base64.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/base64/base64.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/hex/hex.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/hex/hex.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/hex/hex_char.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/openpgp/openpgp.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/openpgp/openpgp.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/pem/pem.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/codec/pem/pem.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cryptobox/cryptobox.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/cryptobox/cryptobox.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/def_engine/def_eng.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/def_engine/def_mode.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/def_engine/def_pk_ops.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/def_engine/def_powm.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/def_engine/lookup_block.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/def_engine/lookup_hash.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/def_engine/lookup_mac.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/def_engine/lookup_stream.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/engine/engine.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/entropy/cryptoapi_rng/es_capi.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/entropy/cryptoapi_rng/es_capi.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/entropy/entropy_src.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/entropy/win32_stats/es_win32.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/entropy/win32_stats/es_win32.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/algo_filt.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/basefilt.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/basefilt.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/buf_filt.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/buf_filt.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/data_snk.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/data_snk.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/data_src.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/data_src.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/filter.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/filter.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/filters.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/out_buf.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/out_buf.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/pbe.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/pipe.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/pipe.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/pipe_io.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/pipe_rw.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/secqueue.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/filters/secqueue.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/fork256/fork256.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/fork256/fork256.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/gost_3411/gost_3411.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/gost_3411/gost_3411.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/has160/has160.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/has160/has160.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/hash.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/md2/md2.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/md2/md2.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/md4/md4.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/md4/md4.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/md5/md5.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/md5/md5.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/mdx_hash/mdx_hash.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/mdx_hash/mdx_hash.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/par_hash/par_hash.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/par_hash/par_hash.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/rmd128/rmd128.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/rmd128/rmd128.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/rmd160/rmd160.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/rmd160/rmd160.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/sha1/sha160.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/sha1/sha160.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/sha2/sha2_32.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/sha2/sha2_32.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/sha2/sha2_64.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/sha2/sha2_64.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/skein/skein_512.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/skein/skein_512.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/tiger/tig_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/tiger/tiger.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/tiger/tiger.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/whirlpool/whrl_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/whirlpool/whrlpool.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/hash/whirlpool/whrlpool.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/kdf.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/kdf.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/kdf1/kdf1.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/kdf1/kdf1.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/kdf2/kdf2.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/kdf2/kdf2.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/mgf1/mgf1.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/mgf1/mgf1.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/ssl_prf/prf_ssl3.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/ssl_prf/prf_ssl3.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/tls_prf/prf_tls.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/tls_prf/prf_tls.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/x942_prf/prf_x942.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/kdf/x942_prf/prf_x942.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/botan.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/get_enc.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/init.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/init.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/libstate.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/libstate.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/look_pk.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/look_pk.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/lookup.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/lookup.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/oid_lookup/oids.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/oid_lookup/oids.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/pk_engine.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/pk_engine.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/policy.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/scan_name.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/libstate/scan_name.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/cbc_mac/cbc_mac.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/cbc_mac/cbc_mac.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/cmac/cmac.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/cmac/cmac.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/hmac/hmac.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/hmac/hmac.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/mac.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/mac.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/ssl3mac/ssl3_mac.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/ssl3mac/ssl3_mac.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/x919_mac/x919_mac.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mac/x919_mac/x919_mac.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/big_code.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/big_io.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/big_ops2.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/big_ops3.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/big_rand.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/bigint.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/bigint.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/divide.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/divide.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/monty_generic/mp_monty.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_asm.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_comba.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_core.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_generic/mp_asm.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_generic/mp_asmi.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_karat.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_misc.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_shift.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mp_types.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/bigint/mulop_generic/mp_mulop.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/blinding.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/blinding.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/def_powm.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/dsa_gen.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/jacobi.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/make_prm.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/mp_numth.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/numthry.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/numthry.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/pow_mod.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/pow_mod.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/powm_fw.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/powm_mnt.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/primes.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/reducer.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/reducer.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/math/numbertheory/ressol.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/cbc/cbc.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/cbc/cbc.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/cfb/cfb.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/cfb/cfb.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/ctr/ctr.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/ctr/ctr.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/cts/cts.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/cts/cts.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/eax/eax.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/eax/eax.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/eax/eax_dec.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/ecb/ecb.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/ecb/ecb.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/mode_pad/mode_pad.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/mode_pad/mode_pad.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/modebase.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/modebase.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/ofb/ofb.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/ofb/ofb.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/xts/xts.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/modes/xts/xts.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mutex/mutex.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mutex/noop_mutex/mux_noop.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mutex/noop_mutex/mux_noop.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mutex/win32_crit_section/mux_win32.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/mutex/win32_crit_section/mux_win32.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pbe/get_pbe.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pbe/get_pbe.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pbe/pbes1/pbes1.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pbe/pbes1/pbes1.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pbe/pbes2/pbes2.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pbe/pbes2/pbes2.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/eme.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/eme.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/eme1/eme1.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/eme1/eme1.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/eme_pkcs/eme_pkcs.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/eme_pkcs/eme_pkcs.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa1/emsa1.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa1/emsa1.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa1_bsi/emsa1_bsi.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa1_bsi/emsa1_bsi.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa2/emsa2.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa2/emsa2.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa3/emsa3.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa3/emsa3.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa4/emsa4.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa4/emsa4.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa_raw/emsa_raw.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/emsa_raw/emsa_raw.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/hash_id/hash_id.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pk_pad/hash_id/hash_id.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dh/dh.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dh/dh.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dh/dh_core.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dh/dh_core.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dh/dh_op.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dl_algo/dl_algo.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dl_algo/dl_algo.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dl_group/dl_group.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dl_group/dl_group.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dlies/dlies.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dlies/dlies.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dsa/dsa.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dsa/dsa.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dsa/dsa_core.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dsa/dsa_core.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dsa/dsa_op.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/dsa/dsa_op.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/elgamal/elg_core.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/elgamal/elg_core.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/elgamal/elg_op.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/elgamal/elg_op.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/elgamal/elgamal.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/elgamal/elgamal.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/if_algo/if_algo.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/if_algo/if_algo.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/if_algo/if_core.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/if_algo/if_core.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/if_algo/if_op.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/if_algo/if_op.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/keypair/keypair.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/keypair/keypair.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/nr/nr.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/nr/nr.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/nr/nr_core.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/nr/nr_core.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/nr/nr_op.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/nr/nr_op.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_algs.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_algs.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_codecs/pkcs8.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_codecs/pkcs8.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_codecs/x509_key.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_codecs/x509_key.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_filts.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_filts.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_keys.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pk_keys.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pubkey.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pubkey.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pubkey_enums.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/pubkey_enums.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/rsa/rsa.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/rsa/rsa.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/rw/rw.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/pubkey/rw/rw.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/auto_rng/auto_rng.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/auto_rng/auto_rng.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/hmac_rng/hmac_rng.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/hmac_rng/hmac_rng.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/randpool/randpool.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/randpool/randpool.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/rng.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/rng.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/x931_rng/x931_rng.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/rng/x931_rng/x931_rng.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/s2k/pbkdf1/pbkdf1.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/s2k/pbkdf1/pbkdf1.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/s2k/pbkdf2/pbkdf2.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/s2k/pbkdf2/pbkdf2.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/s2k/pgps2k/pgp_s2k.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/s2k/pgps2k/pgp_s2k.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/s2k/s2k.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/s2k/s2k.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/selftest/selftest.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/selftest/selftest.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/arc4/arc4.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/arc4/arc4.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/salsa20/salsa20.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/salsa20/salsa20.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/stream_cipher.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/stream_cipher.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/turing/tur_tab.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/turing/turing.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/turing/turing.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/wid_wake/wid_wake.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/stream/wid_wake/wid_wake.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/sym_algo/sym_algo.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/sym_algo/symkey.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/sym_algo/symkey.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/timer/timer.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/timer/timer.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/timer/win32_query_perf_ctr/tm_win32.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/timer/win32_query_perf_ctr/tm_win32.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/bit_ops.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/bswap.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/buf_comp/buf_comp.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/charset.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/charset.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/datastor/datastor.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/datastor/datastor.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/exceptn.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/exceptn.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/loadstor.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/mem_ops.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/mlock.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/parsing.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/parsing.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/rotate.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/stl_util.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/types.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/ui.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/ui.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/util.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/util.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/version.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/version.h
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/src/utils/xor_buf.h

  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/botan-version.h
)

add_library(${botan_lib_name} STATIC ${${botan_lib_name}_sources})

target_compile_definitions(${botan_lib_name}
  PUBLIC
    -DBOTAN_DLL=
)

target_include_directories(${botan_lib_name}
  PRIVATE
    ${CMAKE_SOURCE_DIR}/${rel_botan_dir}
  PUBLIC
    ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/include
)

set(botan_check_sources
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/algos.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/bench.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/bigint.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/block.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/check.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/clock.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/cvc_tests.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/dolook.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/dolook2.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/ec_tests.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/ecdsa.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/eckaeg.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/getopt.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/gfpmath.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/misc.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/pk.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/pk_bench.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/timer.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/validate.cpp
  ${CMAKE_SOURCE_DIR}/${rel_botan_dir}/checks/x509.cpp
)

add_executable(botan_check ${botan_check_sources})

target_link_libraries(botan_check ${botan_lib_name})
